[metadata]
name = casement
version = file: casement/version.py
description = Useful functionality for managing Microsoft Windows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/casement
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any
project_urls =
    Source = https://github.com/blurstudio/casement
    Tracker = https://github.com/blurstudio/casement/issues

[options]
packages = find:
install_requires =
    pywin32
    six
    winshell>=0.6
python_requires = >=3.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
setup_requires =
    setuptools
    setuptools-scm[toml]>=4,<6
    wheel

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    casement = casement.cli:main

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    flake8
    flake8-bugbear
    pep8-naming
    pytest
    tox
pil =
    Pillow

[bdist_wheel]
universal = 1

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722,
    W503,
    B904,
max-line-length = 80
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
